# react-ros-python-assesment-test

./: ALGORITHM.md  README.md  REQUIREMENTS.MD  RESTROSPECTIVE.MD  TESTS.md  docker-compose.yaml  issues.md
backend/: .gitignore  CMakeLists.txt  Dockerfile  entrypoint.sh  package.xml  run.sh
backend/action/: Go.action
backend/cfg/: Speed.cfg
backend/launch/: run.launch  run.sh  run_with_bridge.launch  test.sh
backend/maps/: rail_lab.yaml
backend/nodes/: go_actionserver.py  unit_test.py
backend/nodes/__tests__/: move_integration_test.py  publish_goal_integration_test.py
backend/nodes/examples/: dynrec_client.py  dynrec_server.py  go_actionclient.py  go_actionclient_preempt.py  move.py  rotate.py
backend/srv/: Pause.srv
backend/test/: default.test
client/: .env  .eslintrc  .gitignore  Dockerfile  package.json
client/public/: index.html
client/src/: App.css  App.tsx  constants.ts  index.tsx  theme.ts
client/src/components/: error.component.tsx  index.ts  mapController.component.tsx  pauseButton.component.tsx  speedController.component.tsx
client/src/components/visualization/: index.ts  map.visualization.component.tsx  trail.visualization.component.tsx  turtle.visualization.component.tsx
client/src/components/visualization/stories/: map.visualization.stories.tsx  trail.visualization.stories.tsx  turtle.visualization.stories.tsx
client/src/containers/: app.container.tsx  index.ts  ros.container.tsx
client/src/hooks/: index.ts  useRos.hook.ts  useSpeedModifier.hook.ts  useToggle.hook.ts  useTopicSubscribe.hook.ts
client/src/models/: DynRec.models.ts  extra.models.ts  go.actionlib.model.ts  index.ts  utils.ts
client/src/models/turtlesim/: models.ts
client/src/providers/: app.provider.tsx  index.ts
client/src/utils/: createCtx.ts  rosConfig.ts
scripts/deployment/: run.sh
scripts/development/: commands.sh  test_run.sh
